佑 產品經銷 index img path 更新

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
         <section id="distribution">
             <div id="distribution-area">
                 <div class="title">
-                    <img class="distribution-icon" src="/img/distribution.svg" alt="ig-icon">
+                    <img class="distribution-icon" src="./frontend-img/index-img/distribution/distribution.svg" alt="ig-icon">
                     <div class="title-text">
                         <div class="title-text-1">產品經銷</div>
                         <div class="title-text-2">DISTRIBUTION</div>
@@ -464,11 +464,11 @@
                                 <div class="direction-body">
                                     <div class="img-w-h-border-img">
                                         <img class="product-img"
-                                            src="./images/product/1668998205a2557a7b2e94197ff767970b67041697.jpg"
+                                            src="./frontend-img/index-img/distribution/1668998205a2557a7b2e94197ff767970b67041697.jpg"
                                             alt="產品圖片">
-                                        <img class="ask-icon" src="./img/add_for_ask.svg" alt="黃色加入以詢問">
+                                        <img class="ask-icon" src="./frontend-img/index-img/distribution/add_for_ask.svg" alt="黃色加入以詢問">
                                         <div class="product-img-hover">
-                                            <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="黃色加入以詢問">
+                                            <img class="ask-icon-hover" src="./frontend-img/index-img/distribution/add_for_ask_hover.svg" alt="黃色加入以詢問">
                                             <a href="./distribution.html" class="commodity-more-button btn"
                                                 title="更多商品">
                                                 MORE
@@ -490,11 +490,11 @@
                                 <div class="direction-body">
                                     <div class="img-w-h-border-img">
                                         <img class="product-img"
-                                            src="./images/product/165899031442a0e188f5033bc65bf8d78622277c4e.jpg"
+                                            src="./frontend-img/index-img/distribution/165899031442a0e188f5033bc65bf8d78622277c4e.jpg"
                                             alt="產品圖片">
-                                        <img class="ask-icon" src="./img/add_for_ask.svg" alt="黃色加入以詢問">
+                                        <img class="ask-icon" src="./frontend-img/index-img/distribution/add_for_ask.svg" alt="黃色加入以詢問">
                                         <div class="product-img-hover">
-                                            <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="黃色加入以詢問">
+                                            <img class="ask-icon-hover" src="./frontend-img/index-img/distribution/add_for_ask_hover.svg" alt="黃色加入以詢問">
                                             <a href="./distribution.html" class="commodity-more-button btn"
                                                 title="更多商品">
                                                 MORE
@@ -516,11 +516,11 @@
                                 <div class="direction-body">
                                     <div class="img-w-h-border-img">
                                         <img class="product-img"
-                                            src="./images/product/165899100742a0e188f5033bc65bf8d78622277c4e.jpg"
+                                            src="./frontend-img/index-img/distribution/165899100742a0e188f5033bc65bf8d78622277c4e.jpg"
                                             alt="產品圖片">
-                                        <img class="ask-icon" src="./img/add_for_ask.svg" alt="黃色加入以詢問">
+                                        <img class="ask-icon" src="./frontend-img/index-img/distribution/add_for_ask.svg" alt="黃色加入以詢問">
                                         <div class="product-img-hover">
-                                            <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="黃色加入以詢問">
+                                            <img class="ask-icon-hover" src="./frontend-img/index-img/distribution/add_for_ask_hover.svg" alt="黃色加入以詢問">
                                             <a href="./distribution.html" class="commodity-more-button btn"
                                                 title="更多商品">
                                                 MORE
@@ -542,11 +542,11 @@
                                 <div class="direction-body">
                                     <div class="img-w-h-border-img">
                                         <img class="product-img"
-                                            src="./images/product/1658908734cfecdb276f634854f3ef915e2e980c31.jpg"
+                                            src="./frontend-img/index-img/distribution/1658908734cfecdb276f634854f3ef915e2e980c31.jpg"
                                             alt="產品圖片">
-                                        <img class="ask-icon" src="./img/add_for_ask.svg" alt="黃色加入以詢問">
+                                        <img class="ask-icon" src="./frontend-img/index-img/distribution/add_for_ask.svg" alt="黃色加入以詢問">
                                         <div class="product-img-hover">
-                                            <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="黃色加入以詢問">
+                                            <img class="ask-icon-hover" src="./frontend-img/index-img/distribution/add_for_ask_hover.svg" alt="黃色加入以詢問">
                                             <a href="./distribution.html" class="commodity-more-button btn"
                                                 title="更多商品">
                                                 MORE
@@ -568,11 +568,11 @@
                                 <div class="direction-body">
                                     <div class="img-w-h-border-img">
                                         <img class="product-img"
-                                            src="./images/product/16589912415878a7ab84fb43402106c575658472fa.jpg"
+                                            src="./frontend-img/index-img/distribution/16589912415878a7ab84fb43402106c575658472fa.jpg"
                                             alt="產品圖片">
-                                        <img class="ask-icon" src="./img/add_for_ask.svg" alt="黃色加入以詢問">
+                                        <img class="ask-icon" src="./frontend-img/index-img/distribution/add_for_ask.svg" alt="黃色加入以詢問">
                                         <div class="product-img-hover">
-                                            <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="黃色加入以詢問">
+                                            <img class="ask-icon-hover" src="./frontend-img/index-img/distribution/add_for_ask_hover.svg" alt="黃色加入以詢問">
                                             <a href="./distribution.html" class="commodity-more-button btn"
                                                 title="更多商品">
                                                 MORE
@@ -594,11 +594,11 @@
                                 <div class="direction-body">
                                     <div class="img-w-h-border-img">
                                         <img class="product-img"
-                                            src="./images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
+                                            src="./frontend-img/index-img/distribution/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
                                             alt="產品圖片">
-                                        <img class="ask-icon" src="./img/add_for_ask.svg" alt="黃色加入以詢問">
+                                        <img class="ask-icon" src="./frontend-img/index-img/distribution/add_for_ask.svg" alt="黃色加入以詢問">
                                         <div class="product-img-hover">
-                                            <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="黃色加入以詢問">
+                                            <img class="ask-icon-hover" src="./frontend-img/index-img/distribution/add_for_ask_hover.svg" alt="黃色加入以詢問">
                                             <a href="./distribution.html" class="commodity-more-button btn"
                                                 title="更多商品">
                                                 MORE
@@ -620,10 +620,10 @@
                     </div>
                     <div class="swiper-button-product">
                         <div class="swiper-button-next">
-                            <img class="next-prev-img" src="./img/commodity-next.svg" alt="swiper下一個按鈕">
+                            <img class="next-prev-img" src="./frontend-img/index-img/distribution/commodity-next.svg" alt="swiper下一個按鈕">
                         </div>
                         <div class="swiper-button-prev">
-                            <img class="next-prev-img" src="./img/commodity-prev.svg" alt="swiper上一個按鈕">
+                            <img class="next-prev-img" src="./frontend-img/index-img/distribution/commodity-prev.svg" alt="swiper上一個按鈕">
                         </div>
                     </div>
                     <a href="./distribution.html" class="distribution-area-button" title="更多商品">更多商品</a>
