翔 熱門經典 img path update

--- a/index.html
+++ b/index.html
@@ -634,9 +634,7 @@
 
         <!-- 翔 熱門經典 -->
         <section id="classic">
-            <div class="section_contentintro-logo"
-                data-bgset="images/background_img/classical_content_bg.webp [type: image/webp] | images/background_img/classical_content_bg.png"
-                style="background-image: url(&quot;https://tigersugar.com/images/background_img/about_bg.png&quot;);">
+            <div class="section_contentintro-logo">
                 <div class="menu">
                     <div class="container">
                         <div class="title df">
