佑 媒體報導 img path update

--- a/index.html
+++ b/index.html
@@ -1157,7 +1157,7 @@
             <div class="header">
                 <div class="container">
                     <div class="title">
-                        <img class="share-icon" src="/images/nav/icon1-2.png" alt="ig-icon">
+                        <img class="share-icon" src="./frontend-img/index-img/news/icon1-2.png" alt="ig-icon">
                         <div class="title-text">
                             <div class="title-text-1">媒體報導</div>
                             <div class="title-text-2">News & Blogger</div>
