--- a/index.html
+++ b/index.html
@@ -676,9 +676,9 @@
             <div class="section_contentintro-logo">
                 <div class="menu">
                     <div class="container">
-                        <div class="title df">
+                        <div class="title">
                             <div class="title-icon">
-                                <img src="/images/nav/icon1-3.png" alt="產品圖片">
+                                <img src="./frontend-img/index-img/classic/icon1-3.png" alt="產品圖片">
                             </div>
                             <div class="title-name">
                                 <h1 class="menu-text">熱門經典</h1>
@@ -687,9 +687,9 @@
                         </div>
                     </div>
                     <div class="menu-logo-group">
-                        <img data-aos="fade-up" class="menu-logo" src="/images/menu/menu-logo.png" alt="menu-logo">
+                        <img data-aos="fade-up" class="menu-logo" src="./frontend-img/index-img/classic/menu-logo.png" alt="menu-logo">
                         <div class="menu-logo-group">
-                            <img data-aos="fade-up" class="menu-drink" src="/images/menu/menu-drink.png" alt="熱門經典-飲品">
+                            <img data-aos="fade-up" class="menu-drink" src="./frontend-img/index-img/classic/menu-drink.png" alt="熱門經典-飲品">
                             <div data-aos="fade-up" class="drink-shape">
                                 <div class="drink-circle"></div>
                             </div>
@@ -1072,7 +1072,7 @@
 
                             <div data-aos="fade-up" class="intro">
                                 <div class="icon-section">
-                                    <img class="intro-logo" src="/images/menu/icon.png" data-src="/images/menu/icon.png"
+                                    <img class="intro-logo" src="./frontend-img/index-img/classic/icon.png"
                                         alt="menu_icon">
                                 </div>
                                 <div class="menu-info">
@@ -1083,7 +1083,7 @@
                             </div>
                             <div data-aos="fade-up" class="intro">
                                 <div class="icon-section">
-                                    <img class="intro-logo" src="/images/menu/icon.png" data-src="/images/menu/icon.png"
+                                    <img class="intro-logo" src="./frontend-img/index-img/classic/icon.png"
                                         alt="menu_icon">
                                 </div>
                                 <div class="menu-info">
@@ -1095,7 +1095,7 @@
                             </div>
                             <div data-aos="fade-up" class="intro">
                                 <div class="icon-section">
-                                    <img class="intro-logo" src="/images/menu/icon.png" data-src="/images/menu/icon.png"
+                                    <img class="intro-logo" src="./frontend-img/index-img/classic/icon.png"
                                         alt="menu_icon">
                                 </div>
                                 <div class="menu-info">
@@ -1105,7 +1105,7 @@
                             </div>
                             <div data-aos="fade-up" class="intro">
                                 <div class="icon-section">
-                                    <img class="intro-logo" src="/images/menu/icon.png" data-src="/images/menu/icon.png"
+                                    <img class="intro-logo" src="./frontend-img/index-img/classic/icon.png"
                                         alt="menu_icon">
                                 </div>
                                 <div class="menu-info">
