franchisee img path 更新

--- a/franchisee.html
+++ b/franchisee.html
@@ -243,10 +243,8 @@
                                         </div>
                                     </div>
                                     <div class="swiper-button-next header-button-next">
-                                        <!-- <img src="/img/swiper-button-next.svg alt="button-next"> -->
                                     </div>
                                     <div class="swiper-button-prev header-button-prev">
-                                        <!-- <img src="/img/swiper-button-prev.svg alt="button-prev"> -->
                                     </div>
                                 </div>
                             </div>
@@ -288,7 +286,7 @@
       <div class="background">
         <div class="background-wave">
           <div class="background-tiger-logo">
-            <img src="/images/background_img/logo_black.webp" alt="老虎堂logo">
+            <img src="./frontend-img/franchisee-img/logo_black.webp" alt="老虎堂logo">
           </div>
         </div>
         <!-- 主要區域 -->
@@ -296,7 +294,7 @@
           <!-- 加盟專區中英文logo -->
           <div class="franchisee-logo">
             <div class="franchisee-logo-img">
-              <img src="/img/franchisee.png" alt="加盟專區Logo">
+              <img src="./frontend-img/franchisee-img/franchisee.png" alt="加盟專區Logo">
             </div>
             <div class="franchisee-logo-cn-en">
               <div class="franchisee-logo-cn">加盟專區</div>
@@ -305,7 +303,7 @@
           </div>
           <!-- 老虎堂logo -->
           <div class="tiger-main-logo">
-            <img src="/img/logo- Join Our Franchise!.svg" alt="老虎堂加入我們Logo">
+            <img src="./frontend-img/franchisee-img/logo-Join Our Franchise!.svg" alt="老虎堂加入我們Logo">
           </div>
           <div class="steps-title">
             <span>授</span>
@@ -316,77 +314,77 @@
           <div class="steps-group">
             <div class="steps">
               <div class="step1">
-                <img src="/img/circle.png" alt="步驟外框">
+                <img src="./frontend-img/franchisee-img/circle.png" alt="步驟外框">
                 <span>1</span>
               </div>
               <div class="steps-text">線上填寫申請資料</div>
             </div>
             <div class="steps">
               <div class="step2">
-                <img src="/img/circle.png" alt="步驟外框">
+                <img src="./frontend-img/franchisee-img/circle.png" alt="步驟外框">
                 <span>2</span>
               </div>
               <div class="steps-text">合作夥伴資格初審</div>
             </div>
             <div class="steps">
               <div class="step3">
-                <img src="/img/circle.png" alt="步驟外框">
+                <img src="./frontend-img/franchisee-img/circle.png" alt="步驟外框">
                 <span>3</span>
               </div>
               <div class="steps-text">合作方案洽談與達成共識[安排雙方首次會面]</div>
             </div>
             <div class="steps">
               <div class="step4">
-                <img src="/img/circle.png" alt="步驟外框">
+                <img src="./frontend-img/franchisee-img/circle.png" alt="步驟外框">
                 <span>4</span>
               </div>
               <div class="steps-text">合作夥伴資格複審與合約討論[安排雙方二次會面]</div>
             </div>
             <div class="steps">
               <div class="step5">
-                <img src="/img/circle.png" alt="步驟外框">
+                <img src="./frontend-img/franchisee-img/circle.png" alt="步驟外框">
                 <span>5</span>
               </div>
               <div class="steps-text">簽訂正式合約</div>
             </div>
             <div class="steps">
               <div class="step6">
-                <img src="/img/circle.png" alt="步驟外框">
+                <img src="./frontend-img/franchisee-img/circle.png" alt="步驟外框">
                 <span>6</span>
               </div>
               <div class="steps-text">品牌授權金匯款完成</div>
             </div>
             <div class="steps">
               <div class="step7">
-                <img src="/img/circle.png" alt="步驟外框">
+                <img src="./frontend-img/franchisee-img/circle.png" alt="步驟外框">
                 <span>7</span>
               </div>
               <div class="steps-text">Know-how技術轉移、立地條件評估與建議</div>
             </div>
             <div class="steps">
               <div class="step8">
-                <img src="/img/circle.png" alt="步驟外框">
+                <img src="./frontend-img/franchisee-img/circle.png" alt="步驟外框">
                 <span>8</span>
               </div>
               <div class="steps-text">整體規劃、施工建議、訓練考核</div>
             </div>
             <div class="steps">
               <div class="step9">
-                <img src="/img/circle.png" alt="步驟外框">
+                <img src="./frontend-img/franchisee-img/circle.png" alt="步驟外框">
                 <span>9</span>
               </div>
               <div class="steps-text">試營運</div>
             </div>
             <div class="steps">
               <div class="step10">
-                <img src="/img/circle.png" alt="步驟外框">
+                <img src="./frontend-img/franchisee-img/circle.png" alt="步驟外框">
                 <span>10</span>
               </div>
               <div class="steps-text">正式開幕</div>
             </div>
             <div class="steps">
               <div class="step11">
-                <img src="/img/circle.png" alt="步驟外框">
+                <img src="./frontend-img/franchisee-img/circle.png" alt="步驟外框">
                 <span>11</span>
               </div>
               <div class="steps-text">永續經營</div>
@@ -555,7 +553,7 @@
 
           </div>
         </div>
-        <img src="./images/background_img/logo_black.webp" alt="老虎堂背景圖片" class="img-bg">
+        <img src="./frontend-img/franchisee-img/background_img/logo_black.webp" alt="老虎堂背景圖片" class="img-bg">
       </div>
 
     </section>
@@ -563,7 +561,7 @@
 
   <!-- 秋 前言說明 -->
   <footer>
-    <img class="footer-logo" src="/img/join-us-logo.png" alt="join-us-logo">
+    <img class="footer-logo" src="./frontend-img/franchisee-img/join-us-logo.png" alt="join-us-logo">
     <div class="footer-container">
 
       <div class="store-explain">
