--- a/franchisee-form.html
+++ b/franchisee-form.html
@@ -5,9 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
-  <!-- 專業css -->
+  <!--css -->
   <link rel="stylesheet" href="/css/franchisee-form.css" />
-  <!-- common css -->
   <link rel="stylesheet" href="./css/header.css">
   <link rel="stylesheet" href="./css/footer.css">
   <!-- bootstrap-icon -->
