index css js整理完畢

--- a/index.html
+++ b/index.html
@@ -7,11 +7,6 @@
     <title>Tiger Sugar 老虎堂｜虎虎生風｜黑糖專売</title>
     <link rel="bookmark" href="./favicon.ico">
 
-    <!-- 共通CSS -->
-    <link rel="stylesheet" href="./css/common.css">
-
-    <!-- 專頁css開始 -->
-
     <!-- font-awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
@@ -25,19 +20,9 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
 
     <!-- 各分頁css -->
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/banner.css">
-    <link rel="stylesheet" href="./css/about.css">
-    <link rel="stylesheet" href="./css/social.css">
-    <link rel="stylesheet" href="./css/distribution.css">
-    <link rel="stylesheet" href="./css/classic.css">
-    <link rel="stylesheet" href="./css/news.css">
-    <link rel="stylesheet" href="./css/franchisee.css">
-    <link rel="stylesheet" href="./css/media.css">
     <link rel="stylesheet" href="./css/footer.css">
-    <!-- 專頁css結束 -->
-
 </head>
 
 <body>
@@ -687,9 +672,11 @@
                         </div>
                     </div>
                     <div class="menu-logo-group">
-                        <img data-aos="fade-up" class="menu-logo" src="./frontend-img/index-img/classic/menu-logo.png" alt="menu-logo">
+                        <img data-aos="fade-up" class="menu-logo" src="./frontend-img/index-img/classic/menu-logo.png"
+                            alt="menu-logo">
                         <div class="menu-logo-group">
-                            <img data-aos="fade-up" class="menu-drink" src="./frontend-img/index-img/classic/menu-drink.png" alt="熱門經典-飲品">
+                            <img data-aos="fade-up" class="menu-drink"
+                                src="./frontend-img/index-img/classic/menu-drink.png" alt="熱門經典-飲品">
                             <div data-aos="fade-up" class="drink-shape">
                                 <div class="drink-circle"></div>
                             </div>
@@ -1469,12 +1456,8 @@
         AOS.init();
     </script>
 
-    <script src="./js/index.js"></script>
     <script src="./js/header.js"></script>
-    <script src="./js/banner.js"></script>
-    <script src="./js/media.js"></script>
-    <script src="./js/about.js"></script>
-    <script src="./js/franchisee.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
