準備要幫distribution-popwindow改名

--- a/distribution-popwindow.html
+++ b/distribution-popwindow.html
@@ -12,13 +12,12 @@
 
     <!-- bootstrap-icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
 
     <!-- aos -->
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
 
     <!-- 各分頁css -->
-    <link rel="stylesheet" href="/css/extra-distribution.css" />
+    <link rel="stylesheet" href="./css/distribution.css" />
     <link rel="stylesheet" href="./css/popwindow.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/footer.css">
