--- a/franchisee.html
+++ b/franchisee.html
@@ -12,7 +12,7 @@
 
     <!-- 各分頁css -->
     <!-- 9/20 新加盟專區css (之後另行命名) -->
-    <link rel="stylesheet" href="./css/Franchisee-new-0920.css">
+    <link rel="stylesheet" href="./css/franchisee.css">
     <link rel="stylesheet" href="./css/header.css">
 </head>
 
