--- a/franchisee-form.html
+++ b/franchisee-form.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
 
     <!-- 各分頁css -->
-    <link rel="stylesheet" href="/css/franchisee-form.css" />
+    <link rel="stylesheet" href="./css/franchisee-form.css" />
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/footer.css">
 </head>
