目前完成index和distribution的header跳轉連結

--- a/franchisee.html
+++ b/franchisee.html
@@ -21,7 +21,7 @@
     <header>
         <nav>
             <section class="nav-logo">
-                <a href="./index.html">
+                <a href="./index.html" title="前往首頁">
                     <img class="nav-logo-btn" src="./frontend-img/header-img/LOGO.png" alt="tiger-logo">
                 </a>
             </section>
@@ -29,7 +29,7 @@
             <section class="nav-main">
                 <section class="main-menu">
                     <!----------------------------- 關於我們 ------------------------------------>
-                    <a href="#about" class="about-link">
+                    <a href="#link-about" class="about-link" title="前往首頁的關於我們">
                         <div class="about">
                             <div class="about-img">
                                 <div class="main-menu-img">
@@ -46,7 +46,7 @@
                         </div>
                     </a>
                     <!----------------------------- 產品經銷 ------------------------------------>
-                    <a href="#distribution" class="distribution-link">
+                    <a href="#link-distribution" class="distribution-link" title="前往首頁的產品經銷">
                         <div class="distribution">
                             <div class="main-menu-img">
                                 <img class="main-menu-distribution" src="./frontend-img/header-img/distribution.png"
@@ -61,7 +61,7 @@
                         </div>
                     </a>
                     <!----------------------------- 熱門經典 ------------------------------------>
-                    <a href="#classic" class="classic-link">
+                    <a href="#link-classic" class="classic-link" title="前往首頁的熱門經典">
                         <div class="classic">
                             <div class="main-menu-img">
                                 <img class="main-menu-classic" src="./frontend-img/header-img/classic.png"
@@ -76,7 +76,7 @@
                         </div>
                     </a>
                     <!----------------------------- 媒體露出 ------------------------------------>
-                    <a href="#media" class="media-link">
+                    <a href="#link-media" class="media-link" title="前往首頁的媒體露出">
                         <div class="media">
                             <div class="main-menu-img">
                                 <img class="main-menu-media" src="./frontend-img/header-img/media.png" alt="media-icon">
@@ -90,7 +90,7 @@
                         </div>
                     </a>
                     <!----------------------------- 加盟專區 ------------------------------------>
-                    <a href="#franchisee" class="franchisee-link">
+                    <a href="#link-franchisee" class="franchisee-link" title="前往首頁的加盟專區">
                         <div class="franchisee">
                             <div class="main-menu-img">
                                 <img class="main-menu-franchisee" src="./frontend-img/header-img/franchisee.png"
@@ -110,13 +110,13 @@
                 <section class="social-menu">
                     <div class="social-menu-main">
                         <div class="social-menu-icon">
-                            <a href="https://www.facebook.com/twtigersugar/">
+                            <a href="https://www.facebook.com/twtigersugar/" title="facebook連結">
                                 <img class="social-menu-icon-fb" src="./frontend-img/header-img/fb.png" alt="icon-fb">
                             </a>
                         </div>
 
                         <div class="social-menu-icon">
-                            <a href="https://www.instagram.com/twtigersugar/">
+                            <a href="https://www.instagram.com/twtigersugar/" title="instagram連結">
                                 <img class="social-menu-icon-ig" src="./frontend-img/header-img/ig.png"
                                     alt="social-menu-icon-ig">
                             </a>
@@ -126,14 +126,14 @@
                     <section class="language-menu ">
                         <div class="language-position">
                             <div class="drop-down-menu">
-                                <a href="#">LANGUAGE &dtrif;</a>
+                                <a href="#" title="語言切換">LANGUAGE &dtrif;</a>
                             </div>
                             <div class="drop-down-menu-sub">
                                 <div class="dropdown-content-ch">
-                                    <a href="https://tigersugar.com/">繁體中文</a>
+                                    <a href="https://tigersugar.com/" title="選擇中文">繁體中文</a>
                                 </div>
                                 <div class="dropdown-content-en">
-                                    <a href="https://en.tigersugar.com/">English</a>
+                                    <a href="https://en.tigersugar.com/" title="select on English">English</a>
                                 </div>
                             </div>
                         </div>
@@ -154,7 +154,7 @@
                         <div class="flex-mine-menu">
                             <div class="top-mine-menu">
                                 <!----------------------------- 關於我們 ------------------------------------>
-                                <a href="#about" id="drop-about">
+                                <a href="#link-about" id="drop-about" title="前往首頁的關於我們">
                                     <div class="menu-about">
                                         <div class="about-img">
                                             <img class="main-menu-about" src="./frontend-img/header-img/about.png"
@@ -169,7 +169,7 @@
                                     </div>
                                 </a>
                                 <!----------------------------- 產品經銷 ------------------------------------>
-                                <a href="#distribution" id="drop-distribution">
+                                <a href="#link-distribution" id="drop-distribution" title="前往首頁的產品經銷">
                                     <div class="menu-distribution">
                                         <div class="distribution-img">
                                             <img class="main-menu-distribution"
@@ -186,7 +186,7 @@
                                     </div>
                                 </a>
                                 <!----------------------------- 熱門經典 ------------------------------------>
-                                <a href="#classic" id="drop-classic">
+                                <a href="#link-classic" id="drop-classic" title="前往首頁的熱門經典">
                                     <div class="menu-classic">
                                         <div class="classic-img">
                                             <img class="main-menu-classic" src="./frontend-img/header-img/classic.png"
@@ -202,7 +202,7 @@
                                     </div>
                                 </a>
                                 <!----------------------------- 媒體露出 ------------------------------------>
-                                <a href="#media" id="drop-media">
+                                <a href="#link-media" id="drop-media" title="前往首頁的媒體露出">
                                     <div class="menu-media">
                                         <div class="media-img">
                                             <img class="main-menu-media" src="./frontend-img/header-img/media.png"
@@ -217,7 +217,7 @@
                                     </div>
                                 </a>
                                 <!----------------------------- 加盟專區 ------------------------------------>
-                                <a href="#franchisee" id="drop-franchisee">
+                                <a href="#link-franchisee" id="drop-franchisee" title="前往首頁的加盟專區">
                                     <div class="menu-franchisee">
                                         <div class="franchisee-img">
                                             <img class="main-menu-franchisee"
@@ -241,24 +241,22 @@
                                     <div class="swiper mySwiper header-swiper-container">
                                         <div class="swiper-wrapper header-swiper-language">
                                             <div class="swiper-slide">
-                                                <a href="" title="繁體中文">
+                                                <a href="" title="繁體中文" title="選擇中文">
                                                     <div class="header-slide-ch">
                                                         繁體中文
                                                     </div>
                                                 </a>
                                             </div>
                                             <div class="swiper-slide">
-                                                <a href="" title="english">
+                                                <a href="" title="english" title="select on English">
                                                     <div class="header-slide-en">
                                                         ENGLISH
                                                     </div>
                                                 </a>
                                             </div>
                                         </div>
-                                        <div class="swiper-button-next header-button-next">
-                                        </div>
-                                        <div class="swiper-button-prev header-button-prev">
-                                        </div>
+                                        <div class="swiper-button-next header-button-next"></div>
+                                        <div class="swiper-button-prev header-button-prev"></div>
                                     </div>
                                 </div>
                                 <!----------------------------- 社群連結 ------------------------------------>
@@ -279,9 +277,9 @@
         </nav>
         <!-- 秋 選單紀錄 按鈕 -->
         <a href="./distribution-confirm.html" class="shop-cart-container" title="前往購物車">
-            <img class="shop-cart" src="./frontend-img/header-img/shop_cart_button.svg">
+            <img class="shop-cart" src="./frontend-img/header-img/shop_cart_button.svg" alt="前往購物車">
             <div class="shop-cart-amount-area">
-                <img class="shop-cart-amount" src="./frontend-img/header-img/amount.svg">
+                <img class="shop-cart-amount" src="./frontend-img/header-img/amount.svg" alt="前往購物車">
                 <div class="shop-cart-number">0</div>
             </div>
         </a>
@@ -289,7 +287,7 @@
         <!-- 秋 top 按鈕 -->
         <div class="go-to-top-container topbtn">
             <!-- "#"回到最上方 -->
-            <a href="#"><img class="go-to-top" src="./frontend-img/header-img/go_to_top.svg" alt="go_to_top"></a>
+            <a href="#" title="回到最上方"><img class="go-to-top" src="./frontend-img/header-img/go_to_top.svg" alt="go_to_top"></a>
         </div>
     </header>
 
