--- a/distribution.html
+++ b/distribution.html
@@ -25,11 +25,11 @@
 </head>
 
 <body>
-    <!-- nav bar -->
+    <!-- 秋 header -->
     <header>
         <nav>
             <section class="nav-logo">
-                <a href="./index.html">
+                <a href="./index.html" title="前往首頁">
                     <img class="nav-logo-btn" src="./frontend-img/header-img/LOGO.png" alt="tiger-logo">
                 </a>
             </section>
@@ -37,7 +37,7 @@
             <section class="nav-main">
                 <section class="main-menu">
                     <!----------------------------- 關於我們 ------------------------------------>
-                    <a href="#about" class="about-link">
+                    <a href="./index.html#link-about" class="about-link" title="前往首頁的關於我們">
                         <div class="about">
                             <div class="about-img">
                                 <div class="main-menu-img">
@@ -54,7 +54,7 @@
                         </div>
                     </a>
                     <!----------------------------- 產品經銷 ------------------------------------>
-                    <a href="#distribution" class="distribution-link">
+                    <a href="#" class="distribution-link" title="前往產品經銷頁">
                         <div class="distribution">
                             <div class="main-menu-img">
                                 <img class="main-menu-distribution" src="./frontend-img/header-img/distribution.png"
@@ -69,7 +69,7 @@
                         </div>
                     </a>
                     <!----------------------------- 熱門經典 ------------------------------------>
-                    <a href="#classic" class="classic-link">
+                    <a href="./index.html#link-classic" class="classic-link" title="前往首頁的熱門經典">
                         <div class="classic">
                             <div class="main-menu-img">
                                 <img class="main-menu-classic" src="./frontend-img/header-img/classic.png"
@@ -84,7 +84,7 @@
                         </div>
                     </a>
                     <!----------------------------- 媒體露出 ------------------------------------>
-                    <a href="#media" class="media-link">
+                    <a href="./index.html#link-media" class="media-link" title="前往首頁的媒體露出">
                         <div class="media">
                             <div class="main-menu-img">
                                 <img class="main-menu-media" src="./frontend-img/header-img/media.png" alt="media-icon">
@@ -98,7 +98,7 @@
                         </div>
                     </a>
                     <!----------------------------- 加盟專區 ------------------------------------>
-                    <a href="#franchisee" class="franchisee-link">
+                    <a href="./franchisee.html" class="franchisee-link" title="前往加盟專區頁">
                         <div class="franchisee">
                             <div class="main-menu-img">
                                 <img class="main-menu-franchisee" src="./frontend-img/header-img/franchisee.png"
@@ -118,13 +118,13 @@
                 <section class="social-menu">
                     <div class="social-menu-main">
                         <div class="social-menu-icon">
-                            <a href="https://www.facebook.com/twtigersugar/">
+                            <a href="https://www.facebook.com/twtigersugar/" title="facebook連結">
                                 <img class="social-menu-icon-fb" src="./frontend-img/header-img/fb.png" alt="icon-fb">
                             </a>
                         </div>
 
                         <div class="social-menu-icon">
-                            <a href="https://www.instagram.com/twtigersugar/">
+                            <a href="https://www.instagram.com/twtigersugar/" title="instagram連結">
                                 <img class="social-menu-icon-ig" src="./frontend-img/header-img/ig.png"
                                     alt="social-menu-icon-ig">
                             </a>
@@ -134,14 +134,14 @@
                     <section class="language-menu ">
                         <div class="language-position">
                             <div class="drop-down-menu">
-                                <a href="#">LANGUAGE &dtrif;</a>
+                                <a href="#" title="語言切換">LANGUAGE &dtrif;</a>
                             </div>
                             <div class="drop-down-menu-sub">
                                 <div class="dropdown-content-ch">
-                                    <a href="https://tigersugar.com/">繁體中文</a>
+                                    <a href="https://tigersugar.com/" title="選擇中文">繁體中文</a>
                                 </div>
                                 <div class="dropdown-content-en">
-                                    <a href="https://en.tigersugar.com/">English</a>
+                                    <a href="https://en.tigersugar.com/" title="select on English">English</a>
                                 </div>
                             </div>
                         </div>
@@ -162,7 +162,7 @@
                         <div class="flex-mine-menu">
                             <div class="top-mine-menu">
                                 <!----------------------------- 關於我們 ------------------------------------>
-                                <a href="#about" id="drop-about">
+                                <a href="./index.html#link-about" id="drop-about" title="前往首頁的關於我們">
                                     <div class="menu-about">
                                         <div class="about-img">
                                             <img class="main-menu-about" src="./frontend-img/header-img/about.png"
@@ -177,7 +177,7 @@
                                     </div>
                                 </a>
                                 <!----------------------------- 產品經銷 ------------------------------------>
-                                <a href="#distribution" id="drop-distribution">
+                                <a href="#" id="drop-distribution" title="前往產品經銷頁">
                                     <div class="menu-distribution">
                                         <div class="distribution-img">
                                             <img class="main-menu-distribution"
@@ -194,7 +194,7 @@
                                     </div>
                                 </a>
                                 <!----------------------------- 熱門經典 ------------------------------------>
-                                <a href="#classic" id="drop-classic">
+                                <a href="./index.html#link-classic" id="drop-classic" title="前往首頁的熱門經典">
                                     <div class="menu-classic">
                                         <div class="classic-img">
                                             <img class="main-menu-classic" src="./frontend-img/header-img/classic.png"
@@ -210,7 +210,7 @@
                                     </div>
                                 </a>
                                 <!----------------------------- 媒體露出 ------------------------------------>
-                                <a href="#media" id="drop-media">
+                                <a href="./index.html#link-media" id="drop-media" title="前往首頁的媒體露出">
                                     <div class="menu-media">
                                         <div class="media-img">
                                             <img class="main-menu-media" src="./frontend-img/header-img/media.png"
@@ -225,7 +225,7 @@
                                     </div>
                                 </a>
                                 <!----------------------------- 加盟專區 ------------------------------------>
-                                <a href="#franchisee" id="drop-franchisee">
+                                <a href="./franchisee.html" id="drop-franchisee" title="前往加盟專區頁">
                                     <div class="menu-franchisee">
                                         <div class="franchisee-img">
                                             <img class="main-menu-franchisee"
@@ -249,26 +249,22 @@
                                     <div class="swiper mySwiper header-swiper-container">
                                         <div class="swiper-wrapper header-swiper-language">
                                             <div class="swiper-slide">
-                                                <a href="" title="繁體中文">
+                                                <a href="" title="繁體中文" title="選擇中文">
                                                     <div class="header-slide-ch">
                                                         繁體中文
                                                     </div>
                                                 </a>
                                             </div>
                                             <div class="swiper-slide">
-                                                <a href="" title="english">
+                                                <a href="" title="english" title="select on English">
                                                     <div class="header-slide-en">
                                                         ENGLISH
                                                     </div>
                                                 </a>
                                             </div>
                                         </div>
-                                        <div class="swiper-button-next header-button-next">
-                                            <!-- <img src="/img/swiper-button-next.svg alt="button-next"> -->
-                                        </div>
-                                        <div class="swiper-button-prev header-button-prev">
-                                            <!-- <img src="/img/swiper-button-prev.svg alt="button-prev"> -->
-                                        </div>
+                                        <div class="swiper-button-next header-button-next"></div>
+                                        <div class="swiper-button-prev header-button-prev"></div>
                                     </div>
                                 </div>
                                 <!----------------------------- 社群連結 ------------------------------------>
@@ -289,9 +285,9 @@
         </nav>
         <!-- 秋 選單紀錄 按鈕 -->
         <a href="./distribution-confirm.html" class="shop-cart-container" title="前往購物車">
-            <img class="shop-cart" src="./frontend-img/header-img/shop_cart_button.svg">
+            <img class="shop-cart" src="./frontend-img/header-img/shop_cart_button.svg" alt="前往購物車">
             <div class="shop-cart-amount-area">
-                <img class="shop-cart-amount" src="./frontend-img/header-img/amount.svg">
+                <img class="shop-cart-amount" src="./frontend-img/header-img/amount.svg" alt="前往購物車">
                 <div class="shop-cart-number">0</div>
             </div>
         </a>
@@ -299,9 +295,10 @@
         <!-- 秋 top 按鈕 -->
         <div class="go-to-top-container topbtn">
             <!-- "#"回到最上方 -->
-            <a href="#"><img class="go-to-top" src="./frontend-img/header-img/go_to_top.svg" alt="go_to_top"></a>
+            <a href="#" title="回到最上方"><img class="go-to-top" src="./frontend-img/header-img/go_to_top.svg" alt="go_to_top"></a>
         </div>
     </header>
+
     <div class="window-overlay"></div>
     <!-- 內容頁 -->
     <section id="distribution">
