--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header>
         <nav>
             <section class="nav-logo">
-                <a href="./index.html">
+                <a href="./index.html" title="前往首頁">
                     <img class="nav-logo-btn" src="./frontend-img/header-img/LOGO.png" alt="tiger-logo">
                 </a>
             </section>
@@ -38,7 +38,7 @@
             <section class="nav-main">
                 <section class="main-menu">
                     <!----------------------------- 關於我們 ------------------------------------>
-                    <a href="#link-about" class="about-link">
+                    <a href="#link-about" class="about-link" title="前往首頁的關於我們">
                         <div class="about">
                             <div class="about-img">
                                 <div class="main-menu-img">
@@ -55,7 +55,7 @@
                         </div>
                     </a>
                     <!----------------------------- 產品經銷 ------------------------------------>
-                    <a href="#link-distribution" class="distribution-link">
+                    <a href="#link-distribution" class="distribution-link" title="前往首頁的產品經銷">
                         <div class="distribution">
                             <div class="main-menu-img">
                                 <img class="main-menu-distribution" src="./frontend-img/header-img/distribution.png"
@@ -70,7 +70,7 @@
                         </div>
                     </a>
                     <!----------------------------- 熱門經典 ------------------------------------>
-                    <a href="#link-classic" class="classic-link">
+                    <a href="#link-classic" class="classic-link" title="前往首頁的熱門經典">
                         <div class="classic">
                             <div class="main-menu-img">
                                 <img class="main-menu-classic" src="./frontend-img/header-img/classic.png"
@@ -85,7 +85,7 @@
                         </div>
                     </a>
                     <!----------------------------- 媒體露出 ------------------------------------>
-                    <a href="#link-media" class="media-link">
+                    <a href="#link-media" class="media-link" title="前往首頁的媒體露出">
                         <div class="media">
                             <div class="main-menu-img">
                                 <img class="main-menu-media" src="./frontend-img/header-img/media.png" alt="media-icon">
@@ -99,7 +99,7 @@
                         </div>
                     </a>
                     <!----------------------------- 加盟專區 ------------------------------------>
-                    <a href="#link-franchisee" class="franchisee-link">
+                    <a href="#link-franchisee" class="franchisee-link" title="前往首頁的加盟專區">
                         <div class="franchisee">
                             <div class="main-menu-img">
                                 <img class="main-menu-franchisee" src="./frontend-img/header-img/franchisee.png"
@@ -119,13 +119,13 @@
                 <section class="social-menu">
                     <div class="social-menu-main">
                         <div class="social-menu-icon">
-                            <a href="https://www.facebook.com/twtigersugar/">
+                            <a href="https://www.facebook.com/twtigersugar/" title="facebook連結">
                                 <img class="social-menu-icon-fb" src="./frontend-img/header-img/fb.png" alt="icon-fb">
                             </a>
                         </div>
 
                         <div class="social-menu-icon">
-                            <a href="https://www.instagram.com/twtigersugar/">
+                            <a href="https://www.instagram.com/twtigersugar/" title="instagram連結">
                                 <img class="social-menu-icon-ig" src="./frontend-img/header-img/ig.png"
                                     alt="social-menu-icon-ig">
                             </a>
@@ -135,14 +135,14 @@
                     <section class="language-menu ">
                         <div class="language-position">
                             <div class="drop-down-menu">
-                                <a href="#">LANGUAGE &dtrif;</a>
+                                <a href="#" title="語言切換">LANGUAGE &dtrif;</a>
                             </div>
                             <div class="drop-down-menu-sub">
                                 <div class="dropdown-content-ch">
-                                    <a href="https://tigersugar.com/">繁體中文</a>
+                                    <a href="https://tigersugar.com/" title="選擇中文">繁體中文</a>
                                 </div>
                                 <div class="dropdown-content-en">
-                                    <a href="https://en.tigersugar.com/">English</a>
+                                    <a href="https://en.tigersugar.com/" title="select on English">English</a>
                                 </div>
                             </div>
                         </div>
@@ -163,7 +163,7 @@
                         <div class="flex-mine-menu">
                             <div class="top-mine-menu">
                                 <!----------------------------- 關於我們 ------------------------------------>
-                                <a href="#link-about" id="drop-about">
+                                <a href="#link-about" id="drop-about" title="前往首頁的關於我們">
                                     <div class="menu-about">
                                         <div class="about-img">
                                             <img class="main-menu-about" src="./frontend-img/header-img/about.png"
@@ -178,7 +178,7 @@
                                     </div>
                                 </a>
                                 <!----------------------------- 產品經銷 ------------------------------------>
-                                <a href="#link-distribution" id="drop-distribution">
+                                <a href="#link-distribution" id="drop-distribution" title="前往首頁的產品經銷">
                                     <div class="menu-distribution">
                                         <div class="distribution-img">
                                             <img class="main-menu-distribution"
@@ -195,7 +195,7 @@
                                     </div>
                                 </a>
                                 <!----------------------------- 熱門經典 ------------------------------------>
-                                <a href="#link-classic" id="drop-classic">
+                                <a href="#link-classic" id="drop-classic" title="前往首頁的熱門經典">
                                     <div class="menu-classic">
                                         <div class="classic-img">
                                             <img class="main-menu-classic" src="./frontend-img/header-img/classic.png"
@@ -211,7 +211,7 @@
                                     </div>
                                 </a>
                                 <!----------------------------- 媒體露出 ------------------------------------>
-                                <a href="#link-media" id="drop-media">
+                                <a href="#link-media" id="drop-media" title="前往首頁的媒體露出">
                                     <div class="menu-media">
                                         <div class="media-img">
                                             <img class="main-menu-media" src="./frontend-img/header-img/media.png"
@@ -226,7 +226,7 @@
                                     </div>
                                 </a>
                                 <!----------------------------- 加盟專區 ------------------------------------>
-                                <a href="#link-franchisee" id="drop-franchisee">
+                                <a href="#link-franchisee" id="drop-franchisee" title="前往首頁的加盟專區">
                                     <div class="menu-franchisee">
                                         <div class="franchisee-img">
                                             <img class="main-menu-franchisee"
@@ -250,26 +250,22 @@
                                     <div class="swiper mySwiper header-swiper-container">
                                         <div class="swiper-wrapper header-swiper-language">
                                             <div class="swiper-slide">
-                                                <a href="" title="繁體中文">
+                                                <a href="" title="繁體中文" title="選擇中文">
                                                     <div class="header-slide-ch">
                                                         繁體中文
                                                     </div>
                                                 </a>
                                             </div>
                                             <div class="swiper-slide">
-                                                <a href="" title="english">
+                                                <a href="" title="english" title="select on English">
                                                     <div class="header-slide-en">
                                                         ENGLISH
                                                     </div>
                                                 </a>
                                             </div>
                                         </div>
-                                        <div class="swiper-button-next header-button-next">
-                                            <!-- <img src="/img/swiper-button-next.svg alt="button-next"> -->
-                                        </div>
-                                        <div class="swiper-button-prev header-button-prev">
-                                            <!-- <img src="/img/swiper-button-prev.svg alt="button-prev"> -->
-                                        </div>
+                                        <div class="swiper-button-next header-button-next"></div>
+                                        <div class="swiper-button-prev header-button-prev"></div>
                                     </div>
                                 </div>
                                 <!----------------------------- 社群連結 ------------------------------------>
@@ -290,9 +286,9 @@
         </nav>
         <!-- 秋 選單紀錄 按鈕 -->
         <a href="./distribution-confirm.html" class="shop-cart-container" title="前往購物車">
-            <img class="shop-cart" src="./frontend-img/header-img/shop_cart_button.svg">
+            <img class="shop-cart" src="./frontend-img/header-img/shop_cart_button.svg" alt="前往購物車">
             <div class="shop-cart-amount-area">
-                <img class="shop-cart-amount" src="./frontend-img/header-img/amount.svg">
+                <img class="shop-cart-amount" src="./frontend-img/header-img/amount.svg" alt="前往購物車">
                 <div class="shop-cart-number">0</div>
             </div>
         </a>
@@ -300,7 +296,7 @@
         <!-- 秋 top 按鈕 -->
         <div class="go-to-top-container topbtn">
             <!-- "#"回到最上方 -->
-            <a href="#"><img class="go-to-top" src="./frontend-img/header-img/go_to_top.svg" alt="go_to_top"></a>
+            <a href="#" title="回到最上方"><img class="go-to-top" src="./frontend-img/header-img/go_to_top.svg" alt="go_to_top"></a>
         </div>
     </header>
 
