--- a/distribution.html
+++ b/distribution.html
@@ -654,7 +654,7 @@
             </div>
             <div class="franchisee-container-big">
                 <div class="franchisee-container-animation" data-aos="zoom-in">
-                    <a href="" class="franchisee-link">
+                    <a href="./franchisee-form.html" class="franchisee-link">
                         <div class="join-us-img">
                             <div class="join-us-info">
                                 <h2>
